# laliga-block-watch

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
probe-runner/: README.md  pyproject.toml
probe-runner/fixtures/: sample_block.json
probe-runner/migrations/: 001_init.sql
probe-runner/src/lbw_probe/: __init__.py  atlas.py  cli.py  detect.py  live.py  orchestrator.py  schedule.py  storage.py  targets.py
probe-runner/tests/: test_atlas.py  test_detect.py  test_live.py  test_orchestrator.py  test_schedule.py  test_targets.py
