[project]
name = "lbw-probe"
version = "0.0.1"
description = "laliga-block-watch probe runner: schedules RIPE Atlas measurements and records results."
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "psycopg[binary]>=3.2",
    "typer>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "pyright>=1.1",
]

[project.scripts]
lbw-probe = "lbw_probe.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lbw_probe"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
